# scripts_for_my_youtube_channel

./: .env.example  .gitignore  Makefile  README.md  config.example.json  config_example.py  example_usage.py  find_channel_id.py  pyproject.toml  requirements.txt  youtube_metadata_extractor.py
examples/: example_script.py
scripts/: README.md  __init__.py
tests/: test_common.py
utils/: __init__.py  common.py
